--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,7 +11,8 @@ $freifunk-magenta: #dc0067;
 $freifunk-blue:    #009ee0;
 
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color-light: lighten($grey-color, 20%);
+$grey-color-lighter: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
