Styled the editbar, a few minor fixes

--- a/sass/_firmware.scss
+++ b/sass/_firmware.scss
@@ -13,7 +13,7 @@ $height-ubiquiti: 168px;
 .version {
   display: none;
 
-  & + label {
+  + label {
     display: block;
     color: #fff;
     cursor: pointer;
