--- a/sass/_editbar.scss
+++ b/sass/_editbar.scss
@@ -40,6 +40,7 @@
   overflow-y: hidden;
   max-height: 0;
 
+  margin-left: -19px;
   margin-top: 10px;
   box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.15);
   transition: max-height .4s;
