Alternating row colors for tables

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -86,6 +86,11 @@ a.nonexistent {
   }
 }
 
+/* Tables */
+tr:nth-child(even) {
+    background: $grey-color-lightest;
+}
+
 /* "Seamless" iframes */
 iframe {
   border: none;
