--- a/sass/_editbar.scss
+++ b/sass/_editbar.scss
@@ -7,7 +7,8 @@
   @include display-flex;
   @include align-items(flex-start);
 
-  padding: 10px 0 0;
+  padding: 8px 6px 0 0;
+  right: 0;
 
   > li {
     padding: 0 20px 0 0;
