--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -93,7 +93,7 @@ tr:nth-child(even) {
 
 /* Form elements */
 input {
-	box-shadow: inset 1px 1px 5px 0px rgba(0, 0, 0, 0.15)
+	box-shadow: inset 1px 1px 5px 0px rgba(0, 0, 0, 0.15);
 	border: none;
 	padding: 6px 16px;
 }
