Modified tables. Introducing table styles

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -87,8 +87,9 @@ a.nonexistent {
 }
 
 /* Tables */
-tr:nth-child(even) {
-    background: $grey-color-lightest;
+td, th {
+  padding: 8px 16px;
+  vertical-align: top;
 }
 
 /* Form elements */
