--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -88,7 +88,7 @@ a.nonexistent {
 
 /* Tables */
 td, th {
-  padding: 8px 12px !important
+  padding: 8px 12px !important;
   vertical-align: top;
 }
 
