--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,11 @@
 $base-font-family: "OpenSans";
-$base-font-size:   16px;
+$base-font-size:   15px;
+$base-font-weight: 500;
+$mono-font-family: "OxygenMono";
+$mono-font-size:   13px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
+$font-dir:         "/wikistatic/ffks/fonts";
 
 $text-color:       #111;
 $background-color: #fdfdfd;
