MoinMoin diffs are now highlighted in magenta/blue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
   "base",
 //"code", // not used currently
   "editbar",
+  "diff",
   "firmware", // for firmware page (TODO?: split up into seperate css file)
   "font-face",
   "layout",
