--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -94,7 +94,7 @@ td, th {
 
 /* Form elements */
 input {
-	box-shadow: inset 1px 1px 5px 0px rgba(0, 0, 0, 0.15);
+	box-shadow: $inner-shadow-deep;
 	border: none;
 	padding: 6px 16px;
 }
