Styled last modification

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import
   "base",
 //"code", // not used currently
+  "content",
   "editbar",
   "diff",
   "firmware", // for firmware page (TODO?: split up into seperate css file)
