--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
   "diff",
   "firmware", // for firmware page (TODO?: split up into seperate css file)
   "font-face",
+  "footer",
   "layout",
   "header",
   "landing",
