--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -9,11 +9,11 @@
   @include align-items(center);
   @include justify-content(flex-end);
 
-  padding: 8px 6px 0 0;
+  padding: 8px 0 0 6px;
   right: 0;
 
   > li {
-    padding: 0 20px 0 0;
+    padding: 0 0 0 20px;
   }
 
   a, label {
