--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
   "firmware", // for firmware page (TODO?: split up into seperate css file)
   "font-face",
   "footer",
+  "input",
   "layout",
   "header",
   "landing",
