--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -14,11 +14,13 @@ $freifunk-yellow:  #ffb400;
 $freifunk-magenta: #dc0067;
 $freifunk-blue:    #009ee0;
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 20%);
-$grey-color-lighter: lighten($grey-color, 40%);
+$black-color:         #000;
+$white-color:         #fff;
+$grey-color:          #828282;
+$grey-color-light:    lighten($grey-color, 20%);
+$grey-color-lighter:  lighten($grey-color, 40%);
 $grey-color-lightest: lighten($grey-color, 44%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color-dark:     darken($grey-color, 25%);
 
 // Shadows
 $inner-shadow-deep: inset 1px 1px 5px 0px rgba(0, 0, 0, 0.15);
