Fixed white on white even more

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -27,6 +27,11 @@ figcaption {
   font-size: $small-font-size;
 }
 
+/* Inputs */
+input {
+  color: black;
+}
+
 /* Headings */
 h1, h2, h3 {
   font-weight: 300;
