--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
   "base",
 //"code", // not used currently
   "content",
+  "editor",
   "editbar",
   "diff",
   "firmware", // for firmware page (TODO?: split up into seperate css file)
