--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -53,4 +53,29 @@
   & span.strike {
     text-decoration: line-through;
   }
+
+  & .table-of-contents {
+    padding: 8px 12px;
+    box-shadow: $outer-shadow;
+
+    & p.table-of-contents-heading {
+      display:none; 
+    }
+
+    /* Counters for displaying
+        1.3.2.
+       instead of only
+        2. */
+    & ol {
+      counter-reset: item
+    }
+
+    & li {
+      display: block
+    }
+
+    & li:before {
+      content: counters(item, ".") ". "; counter-increment: item
+    }
+  }
 }
