--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -106,6 +106,15 @@
 
     & p:last-child{
       text-align: right;
+
+      /* You don't quote yourself; therefore
+         everything looks like a link off-site */
+      & a {
+        color: $freifunk-blue;
+      }
+      & a:hover {
+        color: $freifunk-yellow;
+      }
 	}
   }
 }
