--- a/sass/_firmware.scss
+++ b/sass/_firmware.scss
@@ -12,9 +12,9 @@ $height-ubiquiti: 168px;
   margin-top: 32px;
 }
 
-.vendor,
-.device,
-.version {
+input.vendor,
+input.device,
+input.version {
   display: none;
 
   + label {
@@ -82,7 +82,14 @@ $height-ubiquiti: 168px;
   margin-bottom: 16px;
 }
 
-.device + label {
+a.device,
+a.version {
+    display: inline-block;
+    color: #fff;
+}
+
+a.device,
+input.device + label {
   width: 340px;
 
   padding: 24px;
@@ -95,11 +102,11 @@ $height-ubiquiti: 168px;
   }
 }
 
-.device:checked + label {
+input.device:checked + label {
   background-color: #777;
 }
 
-.versions {
+.version-list {
   @include display-flex;
   @include align-items(flex-start);
 
@@ -110,41 +117,14 @@ $height-ubiquiti: 168px;
   transition: top .4s;
 }
 
-.device:checked ~ .versions {
+input.device:checked ~ .version-list {
   top: 8px;
 }
 
-.version + label {
+a.version {
   margin-left: 8px;
   padding: 3px 6px;
 
   background-color: #aaa;
   transition: background-color .4s;
-}
-
-.version:checked + label {
-  background-color: $freifunk-blue;
-}
-
-.download-button {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  border: 0 none;
-
-  margin-top: 16px;
-  margin-bottom: 16px;
-  padding: 16px 24px;
-
-  font: {
-    weight: 300;
-    size: 15px;
-  }
-
-  color: #fff;
-  background-color: $freifunk-blue;
-  transition: background-color .4s;
-
-  &:hover {
-    background-color: darken($freifunk-blue, 10%) !important;
-  }
 }
