--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@ $base-font-size:   15px;
 $base-font-weight: 500;
 $mono-font-family: "OxygenMono";
 $mono-font-size:   13px;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size:  13px;
 $base-line-height: 1.5;
 $font-dir:         "/wikistatic/ffks/fonts";
 
