Changed padding for "image" table style

--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -46,3 +46,8 @@ table.image {
   text-align: right;
   color: $grey-color;
 }
+
+table.image tr:nth-child(even) td {
+  padding: 0px 12px 18px;
+}
+
