--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -33,8 +33,24 @@ input {
 }
 
 /* Headings */
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-weight: 300;
+}
+
+h1 {
+	font-size: 30px;
+}
+
+h2 {
+	font-size: 24px;
+}
+
+h3 {
+	font-size: 21px;
+}
+
+h4 {
+	font-size: 19px;
 }
 
 /* Links */
