--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -14,6 +14,13 @@
     padding: 0;
     margin: 0;
   }
+  & ul {
+    list-style-type: "•";
+    padding-left: 6px;
+    & li {
+      padding-left: 6px;
+    }   
+  }
   /* Buttons */
   & button {
     -moz-appearance: none;
