--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -29,6 +29,8 @@ $outer-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.15);
 
 // Width of the content area
 $content-width:    960px;
+// Width of right aligned floating images within running text
+$image-float-witdh: 170px;
 
 // Responsive stuff - TODO
 $break-tiny:   0px;
