Added table header/footer classes

--- a/sass/_tables.scss
+++ b/sass/_tables.scss
@@ -76,3 +76,14 @@ table.imagefloat td {
   padding-right: 0;
 }
 
+table tr.header {
+  background-color: #dc0067;
+  color: #FFFFFF;
+  font-style: italic; 
+}
+
+table tr.footer {
+  background-color: #009ee0;
+  color: #FFFFFF;
+}
+
